<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/search_bar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mt_hint="@string/searchbar_hint"
            app:mt_placeholder="@string/searchbar_list_all"
            tools:ignore="MissingClass"
            app:mt_textColor="@color/white"
            app:mt_placeholderColor="@color/white"
            app:mt_searchBarColor="@color/slate_800"
            app:mt_searchIconTint="@color/white"
            app:mt_hintColor="@color/white"
            app:mt_dividerColor="@color/white"
            app:mt_highlightedTextColor="@color/white"
            app:mt_backIconTint="@color/white"
            />

        <LinearLayout
            android:id="@+id/video_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.exoplayer2.ui.StyledPlayerView
                android:id="@+id/video_player"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/rose_500"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:text="@string/def_text"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    />
                <ImageView
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_send_24"
                    android:layout_marginStart="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/share_button" />
            </LinearLayout>
        </LinearLayout>



        <ExpandableListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:groupIndicator="@null"
            />
        <LinearLayout
            android:id="@+id/status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/def_text"
                android:gravity="center"
                android:textColor="@color/amber_400"
                tools:ignore="SmallSp"
                />
            <ProgressBar
                android:id="@+id/status_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="false"
                android:max="100"
                android:progress="50"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="3dp"
            android:textSize="10sp"
            android:text="@string/powered_by"
            android:textColor="@color/slate_600"
            tools:ignore="SmallSp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>